--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "deep-freeze": "0.0.1",
     "prop-types": "^15.6.2",
     "react": ">=16.6.3",
     "react-dom": ">=16.6.3",
     "react-scripts": "^2.1.1",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.2"
   },
   "scripts": {
